--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,7 +57,7 @@ dependencies {
     implementation 'id.zelory:compressor:2.1.0'
     implementation 'cn.zhaiyifan:rememberedittext:0.9.0'
     implementation 'com.github.TheHasnatBD:SweetToast:1.0.1'
-    implementation 'com.google.firebase:firebase-messaging:20.0.0'
+
     implementation 'com.google.firebase:firebase-core:17.2.0'
     implementation 'com.firebaseui:firebase-ui-database:3.3.1'
     implementation 'com.google.firebase:firebase-database:19.1.0'
@@ -66,8 +66,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics:17.2.0'
     implementation 'com.google.firebase:firebase-storage:17.0.0'
 
-
-
+    implementation 'sun.bob:mcalendarview:1.0.0'
+    implementation 'com.google.firebase:firebase-messaging:20.0.0'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
